# golem-gpu-imager

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
crates/golem-config-reader/: Cargo.toml
crates/golem-config-reader/src/: main.rs
crates/golem-gpt-repair/: Cargo.toml
crates/golem-gpt-repair/src/: main.rs
crates/golem-partition-lister/: Cargo.toml
crates/golem-partition-lister/src/: main.rs
docs/: ENVIRONMENT_VARIABLES.md  UI.md  WINDOWS_ADMIN.md  design-suggestions.md  iced-style.md
installers/: README.md
installers/linux/: README.md  build-deb.sh  control
installers/macos/: README.md
installers/windows/: README.md  build-msi.bat  build-msi.ps1  build-msi.sh  installer.wxs
resources/: Golem-GPU-Imager.manifest  README.md
src/: disk.rs  lib.rs  main.rs  models.rs  style.rs  ui.rs  utils.rs  version.rs
src/disk/: aligned_reader.rs  common.rs  configuration.rs  linux.rs  mod.rs  windows.rs  windows_aligned_io.rs
src/ui/: application.rs  application_new.rs  application_old.rs  configuration.rs  device_selection.rs  edit.rs  edit_workflow.rs  flash.rs  flash_workflow.rs  icons.rs  messages.rs  mod.rs  preset_editor.rs  preset_manager.rs  start_screen.rs
src/ui/configuration/: handler.rs  messages.rs  state.rs  view.rs
src/ui/device_selection/: handler.rs  messages.rs  state.rs
src/ui/edit_workflow/: handler.rs  messages.rs  state.rs  ui.rs
src/ui/flash_workflow/: handler.rs  messages.rs  state.rs  ui.rs
src/ui/preset_manager/: handler.rs  messages.rs  state.rs  ui.rs
src/ui/shared/: configuration.rs  mod.rs
src/utils/: disks.rs  elevation.rs  eth.rs  image_metadata.rs  metadata_calculator.rs  preset_manager.rs  repo.rs  streaming_hash_calculator.rs  tracker.rs  validation.rs
