[package]
name = "golem-gpu-imager"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
directories = "6.0.0"
fatfs = "0.3.6"
iced = { git = "https://github.com/iced-rs/iced.git", features = ["canvas", "tokio", "svg", "image", "sipper"] }
rs-drivelist = "0.9.4"
reqwest = {  version = "0.12.15", features = ["stream", "rustls-tls-webpki-roots"] }
tokio = "1.44.2"

[target.'cfg(target_os="linux")'.dependencies]
udisks2 = "0.3.1"
libc = "0.2.172"


[dev-dependencies]

tokio = { version = "1.44.2", features = ["macros"] }

[build-dependencies]
windows_exe_info = {  version = "0.5", features = [
    "manifest",
    "versioninfo",
    "icon_ico",
] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[package.metadata.bundle]
name = "Golem GPU Imager"
icon = ["resources/icon.ico"]

