[package]
name = "golem-gpu-imager"
version = "0.1.4"
edition = "2024"
build = "build.rs"

[[bin]]
name = "golem-config-reader"
path = "src/bin/golem-config-reader.rs"

[[bin]]
name = "golem-partition-lister"
path = "src/bin/golem-partition-lister.rs"

[[bin]]
name = "golem-gpt-repair"
path = "src/bin/golem-gpt-repair.rs"

[dependencies]
directories = "6.0.0"
fatfs = "0.3.6"
futures-util = "0.3.30"
hex = "0.4.3"
iced = { git = "https://github.com/iced-rs/iced.git", features = ["canvas", "tokio", "svg", "image", "sipper"] }
rs-drivelist = "0.9.4"
reqwest = {  version = "0.12.15", features = ["stream", "rustls-tls-webpki-roots", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
tracing-appender = "0.2"
ethereum-types = { version = "0.15.1", default-features = false }
crunchy = "=0.2.2"
toml = "0.8.2"
anyhow = "1.0.98"
gpt = "3.1.0"
uuid = "1.8.0"
tokio-stream = "0.1.17"
once_cell = "1.19.0"
xz4rust = "0.2.1"
regex = "1.10.2"
clap = { version = "4.5.1", features = ["derive"] }
crc32fast = "1.3.2"

[target.'cfg(target_os="linux")'.dependencies]
udisks2 = "0.3.1"
libc = "0.2.172"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation", 
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_WindowsProgramming"
]}


[dev-dependencies]

tokio = { version = "1.44.2", features = ["macros"] }

[build-dependencies]
windows_exe_info = {  version = "0.5", features = [
    "manifest",
    "versioninfo",
    "icon_ico",
] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[features]
default = []
enterprise = []

[package.metadata.bundle]
name = "Golem GPU Imager"
icon = ["resources/icon.ico"]

